P5 E-learning/force-app/main/default/objects/Modulo__c/Modulo__c.object-meta.xml
<CustomObject>
    <label>Modulo</label>
    <nameField>
        <label>Modulo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modulos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>