P5 E-learning/force-app/main/default/objects/Modulo__c/fields/Activado__c.field-meta.xml
<CustomField>
    <fullName>Activado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activado</label>
    <type>Checkbox</type>
</CustomField>