P5 E-learning/force-app/main/default/objects/Modulo__c/fields/CantidadUnidades__c.field-meta.xml
<CustomField>
    <fullName>CantidadUnidades__c</fullName>
    <label>CantidadUnidades</label>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>