P5 E-learning/force-app/main/default/objects/Modulo__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>