P5 E-learning/force-app/main/default/objects/Modulo__c/fields/PuntosPosibles__c.field-meta.xml
<CustomField>
    <fullName>PuntosPosibles__c</fullName>
    <label>PuntosPosibles</label>
    <summarizedField>Unidad__c.Puntos__c</summarizedField>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>