P5 E-learning/force-app/main/default/objects/Modulo__c/fields/TiempoTotal__c.field-meta.xml
<CustomField>
    <fullName>TiempoTotal__c</fullName>
    <label>TiempoTotal (min)</label>
    <summarizedField>Unidad__c.Tiempo__c</summarizedField>
    <summaryForeignKey>Unidad__c.Modulo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>