P5 E-learning/force-app/main/default/objects/Modulo__c/validationRules/Antes_de_Activar_Modulo.validationRule-meta.xml
<ValidationRule>
    <fullName>Antes_de_Activar_Modulo</fullName>
    <active>true</active>
    <description>Verificamos que Skill y Roles NO tienen algo</description>
    <errorConditionFormula>If(Activado__c , If(TEXT( Skills__c )=&quot;&quot; ||  ISBLANK( Roles__c ),true,false),false)</errorConditionFormula>
    <errorMessage>Skills y Roles deben tener un valor asignado para poder Activar el modulo</errorMessage>
</ValidationRule>