P5 E-learning/force-app/main/default/objects/Modulo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Skills__c</columns>
    <columns>Roles__c</columns>
    <columns>TiempoTotal__c</columns>
    <columns>PuntosPosibles__c</columns>
    <columns>Activado__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>